# arcadeum-state

./: Cargo.toml  README.md  build.rs  build.sh
.githooks/: pre-commit
async/: Cargo.toml
async/src/: lib.rs
bindings/: .gitignore  Cargo.toml  build.sh  package.json  tsconfig.json
bindings/lib/: index.ts
bindings/src/: game.ts  index.ts  message.ts  server.ts  store.ts
client/: Cargo.toml  build.sh  package.json
client/src/: lib.rs
docs/: docusaurus.config.js  sidebars.js  spec.md
docs/api/: aliases.js  search-index.js  settings.html  source-files.js
docs/api/arcadeum/: all.html  enum.PlayerAction.html  index.html  macro.bind!.html  macro.bind.html  macro.console_log!.html  macro.console_log.html  sidebar-items.js  struct.Diff.html  struct.Proof.html  struct.ProofAction.html  struct.ProofState.html  struct.RootProof.html  trait.Action.html  trait.ID.html  trait.Nonce.html  trait.State.html  type.Player.html
docs/api/arcadeum/crypto/: fn._cached_recover.html  fn.address.html  fn.eip55.html  fn.keccak256.html  fn.recover.html  fn.sign.html  index.html  sidebar-items.js  struct.MerkleProof.html  struct.MerkleTree.html  struct.SecretKey.html  trait.Addressable.html  trait.MerkleLeaf.html  type.Address.html  type.Hash.html  type.Signature.html
docs/api/arcadeum/store/: enum.Log.html  index.html  sidebar-items.js  struct.Context.html  struct.MutateSecretInfo.html  struct.Store.html  struct.StoreAction.html  struct.StoreState.html  struct.Tester.html  trait.Event.html  trait.Secret.html  trait.State.html
docs/api/arcadeum/store/bindings/: index.html  sidebar-items.js  struct.JsRng.html
docs/api/arcadeum/store/tester/: struct.Tester.html
docs/api/arcadeum/utils/: fn.hex.html  fn.unhex.html  index.html  sidebar-items.js
docs/api/arcadeum/version/: fn.tag.html  fn.version.html  index.html  sidebar-items.js
docs/api/implementors/arcadeum/crypto/: trait.Addressable.js
docs/api/implementors/core/clone/: trait.Clone.js
docs/api/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/api/implementors/core/fmt/: trait.Debug.js
docs/api/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/api/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
docs/api/implementors/rand_core/: trait.RngCore.js
docs/api/implementors/serde/de/: trait.Deserialize.js
docs/api/implementors/serde/ser/: trait.Serialize.js
docs/api/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/api/src/arcadeum/: crypto.rs.html  debug.rs.html  error.rs.html  lib.rs.html  utils.rs.html  version.rs.html
docs/api/src/arcadeum/store/: bindings.rs.html  mod.rs.html  tester.rs.html
docs/docs/: design.md  guide.md
docs/src/pages/: index.js
example/: package.json
example/src/: index.ts
examples/coin/src-rs/: Cargo.toml
examples/coin/src-rs/src/: lib.rs
examples/coin/src-ts/: .gitignore  Cargo.toml  package.json
examples/coin/src-ts/src/: lib.rs
examples/coin/test/: package.json
examples/coin/test/src/: client-async.ts  client-sync.ts  client.ts  index.ts
examples/rps/src-rs/: Cargo.toml
examples/rps/src-rs/src/: lib.rs
examples/rps/src-ts/: .gitignore  Cargo.toml  package.json
examples/rps/src-ts/src/: lib.rs
examples/rps/test/: package.json
examples/rps/test/src/: client-async.ts  client-sync.ts  index.ts
examples/ttt/src-rs/: Cargo.toml
examples/ttt/src-rs/src/: lib.rs
examples/ttt/src-ts/: Cargo.toml  package.json
examples/ttt/src-ts/src/: lib.rs
examples/ttt/test/: package.json
examples/ttt/test/src/: client-async.ts  client-sync.ts  client.ts  index.ts
game/: Cargo.toml
game/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: arcadeum.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  cli.rs  crypto.rs  debug.rs  error.rs  lib.rs  main.rs  service.rs  store.rs  utils.rs  version.rs
src/store/: bindings.rs  mod.rs  tester.rs
state/: Cargo.toml
state/src/: crypto.rs  error.rs  lib.rs  store.rs  utils.rs
state/tests/: ttt.rs
std-tester/: Cargo.toml
std-tester/src/: main.rs
substrate/: Cargo.toml  README.md  build.sh  init.sh
substrate/runtime/: Cargo.toml
substrate/runtime/src/: arcadeum.rs  lib.rs
substrate/runtime/wasm/: Cargo.toml  build.sh
substrate/runtime/wasm/src/: lib.rs
substrate/scripts/: build.sh
substrate/src/: chain_spec.rs  main.rs  service.rs
tests/: battleship.rs  blank.rs  coin.rs  ttt.rs
