[package]
name = "arcadeum"
version = "0.15.0"
authors = ["Horizon Blockchain Games Inc."]
edition = "2018"

[features]
default = ["std"]
bindings = ["js-sys", "rand_core", "serde-wasm-bindgen", "std", "wasm-bindgen"]
debug = ["serde-wasm-bindgen", "wasm-bindgen", "web-sys"]
no-crypto = []
std = ["cached", "replace_with/std", "serde_cbor/std"]
tester = ["tester-certify"]
tester-approve = []
tester-certify = []

[dependencies]
cached = { version = "0.11.0", optional = true }
derivative = { version = "2.1.1", features = ["use_core"] }
js-sys = { version = "0.3.25", optional = true }
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
rand = { version = "0.7.0", default-features = false }
rand_core = { version = "0.5.0", optional = true, default-features = false }
rand_xorshift = { version = "0.2.0", features = ["serde1"] }
replace_with = { version = "0.1.3", default-features = false, features = ["nightly"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde-wasm-bindgen = { git = "https://github.com/awestlake87/serde-wasm-bindgen.git", optional = true }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc"] }
tiny-keccak = "1.5.0"
wasm-bindgen = { version = "0.2.48", optional = true, features = ["serde-serialize"] }
web-sys = { version = "0.3.25", optional = true, features = ["console"] }
