[package]
name = "arcadeum"
version = "0.19.0"
authors = ["Horizon Blockchain Games Inc."]
edition = "2018"

[features]
default = ["std"]
no-crypto = []
std = ["cached", "js-sys", "rand_core", "serde-wasm-bindgen", "serde_cbor/std", "wasm-bindgen", "web-sys"]
test-approvals = []

[dependencies]
cached = { version = "0.11.0", optional = true }
derivative = { version = "2.1.1", features = ["use_core"] }
js-sys = { version = "0.3.25", optional = true }
libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac", "static-context"] }
libsecp256k1-rand = { package = "rand", version = "0.7.3", default-features = false }
rand = { version = "0.8.0", default-features = false, features = ["std_rng"] }
rand_core = { version = "0.6.0", optional = true, default-features = false }
rand_xorshift = { version = "0.3.0", features = ["serde1"] }
serde = { version = "1.0.101", default-features = false, features = ["derive"] }
serde-wasm-bindgen = { git = "https://github.com/awestlake87/serde-wasm-bindgen.git", optional = true }
serde_cbor = { version = "0.11.1", default-features = false, features = ["alloc"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
wasm-bindgen = { version = "0.2.73", optional = true, features = ["serde-serialize"] }
web-sys = { version = "0.3.25", optional = true, features = ["console"] }
