[package]
name = "arcadeum-async"
version = "0.1.0"
authors = ["William Hua <william@attente.ca>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15.34", features = ["full"] }
quote = "0.6.12"
