[package]
authors = ["Parity Technologies <admin@parity.io>"]
name = "rust-substrate-prototype-runtime"
version = "0.9.0"
[dependencies]
hex-literal = "0.1.0"
parity-codec = "2.0"
parity-codec-derive = "2.0"
rustc-hex = "1.0"

[dependencies.byteorder]
default-features = false
version = "1.2.7"

[dependencies.game]
default-features = false
path = "../game"

[dependencies.itoa]
default-features = false
version = "*"

[dependencies.safe-mix]
default-features = false
version = "1.0"

[dependencies.serde]
default-features = false
version = "1.0"

[dependencies.serde_derive]
optional = true
version = "1.0"

[dependencies.sr-io]
git = "https://github.com/paritytech/substrate"

[dependencies.sr-primitives]
git = "https://github.com/paritytech/substrate"

[dependencies.sr-std]
git = "https://github.com/paritytech/substrate"

[dependencies.sr-version]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-aura]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-balances]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-consensus]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-executive]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-indices]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-sudo]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-support]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-system]
git = "https://github.com/paritytech/substrate"

[dependencies.srml-timestamp]
git = "https://github.com/paritytech/substrate"

[dependencies.substrate-client]
git = "https://github.com/paritytech/substrate"
optional = true

[dependencies.substrate-consensus-aura-primitives]
git = "https://github.com/paritytech/substrate"

[dependencies.substrate-keyring]
git = "https://github.com/paritytech/substrate"

[dependencies.substrate-primitives]
git = "https://github.com/paritytech/substrate"

[features]
default = ["std"]
std = ["parity-codec/std", "substrate-primitives/std", "substrate-client/std", "sr-std/std", "sr-io/std", "srml-support/std", "srml-balances/std", "srml-executive/std", "srml-aura/std", "srml-indices/std", "sr-primitives/std", "srml-system/std", "srml-timestamp/std", "srml-sudo/std", "sr-version/std", "serde_derive", "serde/std", "safe-mix/std", "substrate-client", "substrate-consensus-aura-primitives/std", "game/std", "byteorder/std", "itoa/std"]
