[package]
name = "arcadeum"
version = "0.1.0"
authors = ["Horizon Blockchain Games"]
edition = "2018"

[features]
default = ["std"]
std = ["rand/std", "serde/std", "replace_with/std"]

[dependencies]
libsecp256k1 = "0.2.2"
tiny-keccak = "1.4.2"
rand = { version = "0.7.0", default-features = false }
rand_xorshift = "0.2.0"
serde = { version = "1.0.98", default-features = false, features = ["derive"] }
replace_with = { version = "0.1.3", default-features = false, features = ["nightly"] }

[dev-dependencies]
libsecp256k1-rand = { package = "rand", version = "0.4.6" }
