[package]
name = "rust-substrate-prototype-runtime-wasm"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "rust_substrate_prototype_runtime"
crate-type = ["cdylib"]

[dependencies]
rust-substrate-prototype-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"rust-substrate-prototype-runtime/std"
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
