[package]
name = "arcadeum-chain-runtime-wasm"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
name = "arcadeum_chain_runtime"
crate-type = ["cdylib"]

[dependencies]
arcadeum-chain-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"arcadeum-chain-runtime/std"
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
