[package]
name = "arcadeum-rps"
version = "0.1.0"
authors = ["William Hua <william@attente.ca>"]
edition = "2018"

[features]
default = ["std"]
std = ["arcadeum-state/std"]
bindings = ["std", "arcadeum-state/bindings", "js-sys"]

[dependencies]
arcadeum-state = { path = "../../../state", default-features = false }
js-sys = { version = "0.3.17", optional = true }
