[profile.release]
lto = true
panic = 'abort'
[dependencies.arcadeum-chain-runtime]
default-features = false
path = '..'

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'arcadeum-chain-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['arcadeum-chain-runtime/std']
